# rust-project-root

./: Cargo.toml  README.md
src/: lib.rs
