[package]
name = "project-root"
version = "0.1.0"
authors = ["Neil Chambers <neil@truelayer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"

[dev-dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
