[package]
name = "project-root"
description = "Simple utility to return the absolute path to your project root"
version = "0.2.1"
authors = ["Neil Chambers <neil@truelayer.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["util", "rootdir"]
categories = ["config", "development-tools", "filesystem"]
repository = "https://github.com/neilwashere/rust-project-root"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
